<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/wt_about_first"
        android:title="@string/about_wt" />
    <item
        android:id="@+id/wt_off"
        android:title="@string/off" />
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/wt_sec_1"
            android:title="@string/freq_continuously" />
        <item
            android:id="@+id/wt_min_5"
            android:title="@string/freq_min_5" />
        <item
            android:id="@+id/wt_hour_1"
            android:title="@string/freq_hour_1" />
    </group>
    <group>
        <item
            android:id="@+id/wt_new_tid"
            android:title="@string/wt_new_id" />
        <item
            android:id="@+id/wt_share"
            android:title="@string/wt_share" />
        <item
            android:id="@+id/wt_map"
            android:title="@string/wt_map" />
        <item
            android:id="@+id/wt_about"
            android:title="@string/about_wt" />
    </group>
    <group>
        <item
            android:id="@+id/wt_disable"
            android:title="@string/disable_wt" />
    </group>

</menu>